[gd_scene load_steps=5 format=2]

[ext_resource path="res://data/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/space_background.png" type="Texture" id=2]
[ext_resource path="res://data/Main.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -960, -544, 0, 0, 0, 0, -960, 544, 0, 0, 0, 0, 960, 544, 0, 0, 0, 0, 960, -544, 0, 0, 0, 0, -960, -544 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="PathRock" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="RockSpawn" type="PathFollow2D" parent="PathRock"]
position = Vector2( -960, -544 )
rotation = 1.5708
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
